# rust_kdb_c_api

./: .gitignore  Cargo.toml  README.md
c_api_examples/: Cargo.toml
c_api_examples/src/: lib.rs
kdb_c_api/: Cargo.toml
kdb_c_api/src/: lib.rs  native.rs
tests/: test.q
