[package]
name = "kdb_c_api"
version = "0.1.6"
authors = ["diamondrod"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/diamondrod/rust_kdb_c_api"
documentation = "https://docs.rs/kdb_c_api"
readme = "../README.md"
description = """
Wrapper of kdb+ C API.
"""

[dependencies]

[dev-dependencies]
libc="^0.2"